[gd_scene format=3 uid="uid://dwfptg0lohfrd"]

[ext_resource type="Script" uid="uid://ca85jubwqu2wf" path="res://scripts/hud.gd" id="1_uo2fv"]
[ext_resource type="FontFile" uid="uid://ds51qtayrlsbx" path="res://assets/kenvector_future_thin.ttf" id="2_047uy"]
[ext_resource type="Texture2D" uid="uid://dv0rjpn1lmmlb" path="res://assets/player_small.png" id="3_5pdws"]
[ext_resource type="Texture2D" uid="uid://b7cr1elioos4f" path="res://assets/play_button.png" id="4_hd3ao"]
[ext_resource type="Texture2D" uid="uid://y6q8b3xdwn7i" path="res://assets/play_button_h.png" id="5_0i1j5"]

[node name="HUD" type="CanvasLayer" unique_id=1749774941]
script = ExtResource("1_uo2fv")

[node name="Timer" type="Timer" parent="." unique_id=977701124]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1480091467]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1783579029]
layout_mode = 2

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer" unique_id=1953172944]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_047uy")
theme_override_font_sizes/font_size = 48
text = "0"

[node name="LivesCountes" type="HBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=597405800]
layout_mode = 2
theme_override_constants/separation = 20

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCountes" unique_id=1642957742]
layout_mode = 2
texture = ExtResource("3_5pdws")
stretch_mode = 3

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCountes" unique_id=1368010934]
layout_mode = 2
texture = ExtResource("3_5pdws")
stretch_mode = 3

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCountes" unique_id=638253682]
layout_mode = 2
texture = ExtResource("3_5pdws")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1807765916]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -94.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer" unique_id=577909002]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_047uy")
theme_override_font_sizes/font_size = 64
text = "Space Rocks!"
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer" unique_id=1408706400]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_hd3ao")
texture_hover = ExtResource("5_0i1j5")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
